--- a/style.css
+++ b/style.css
@@ -109,3 +109,8 @@ button:hover{
     grid-row: span 2;
 }
 
+@media screen and (max-width: 600px){
+    .inputNumOperators{
+        padding: 0 3rem 0 3rem;
+    }
+}
