--- a/media.css
+++ b/media.css
@@ -1,6 +1,7 @@
 @media (max-width: 600px) {
     .inputNumOperators{
         padding: 3rem;
+        border: 1px solid yellow;
     }
 
     .inputNumOperators input{
@@ -8,12 +9,19 @@
     }
 
     button{
-        min-height: 3rem;
-        min-width: 3rem;
+
+        font-size: 1.2rem;
+        height: 0.8rem;
+        width: 0.8rem;
+    }
+
+    img{
+        height: 28px;
+        width: 28px;
     }
 
     .numberOperators button:nth-child(16){
-        height: 6.8rem;
+        height: 10.7rem;
         grid-row: span 2;
     }
 }
