--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
     font-family: var(--fontFamily);
     background-color: var(--bgColor);
 }
@@ -53,7 +53,7 @@ header{
 
 .numberOperators{
     display: grid;
-    grid-template-columns: repeat(4, 2fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 10px;
 }
 
