--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header{
     display: flex;
     gap: 1rem;
     flex-direction: column;
-    /* padding: 0 3rem 0 3rem; */
+    padding: 3rem
 }
 
 .inputNumOperators input{
