--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* height: 100vh; */
+    height: 100vh;
     font-family: var(--fontFamily);
     background-color: var(--bgColor);
 }
@@ -49,7 +49,10 @@ header{
     font-size: 1.5rem;
     padding: 0.7rem;
     min-height: 5rem;
+    text-align: end;
 }
+
+
 
 .numberOperators{
     display: grid;
